--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1><br><br>Lanparty BV</h1>
       <table>
         <tr>
-          <td><img src="https://github.com/redyesuf/lanpart.nl/blob/main/spring-clean-your-pc.jpg" alt='https://github.com/redyesuf/lanpart.nl/blob/main/spring-clean-your-pc'></td>
+          <td><img src="https://github.com/redyesuf/lanpart.nl/blob/main/spring-clean-your-pc.jpg" alt='https://github.com/redyesuf/lanpart.nl/blob/main/spring-clean-your-pc.jpg'></td>
     <td><h2><p>Het bedrijf voor al uw LAN-parties.</p></h2>
       <h2><p>Wij leveren alle informatie voor uw party, zowel de hardware, software en drank!</p></h2></td>
         </tr>
